--- a/MvcProjeKampi.WebUI/Views/Shared/_Layout.cshtml
+++ b/MvcProjeKampi.WebUI/Views/Shared/_Layout.cshtml
@@ -23,8 +23,9 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        <li>@Html.ActionLink("Category", "Index", "Category")</li>
-                        <li>@Html.ActionLink("Listele", "GetCategoryList", "Category")</li>  
+                    <li>@Html.ActionLink("Category", "Index", "Category")</li>
+                    <li>@Html.ActionLink("Listele", "GetCategoryList", "Category")</li>
+                    <li>@Html.ActionLink("Healing", "Index", "Heading")</li>
                 </ul>
             </div>
         </div>
