--- a/MvcProjeKampi.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/MvcProjeKampi.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -97,6 +97,14 @@ to get the desired effect
                                 </p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="/Writer/Index" class="nav-link">
+                                <i class="nav-icon fas fa-pen-nib"></i>
+                                <p>
+                                    Yazarlar
+                                </p>
+                            </a>
+                        </li>
                         <!--
 
 
