--- a/MvcProjeKampi.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/MvcProjeKampi.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -105,6 +105,14 @@ to get the desired effect
                                 </p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="/Heading/Index" class="nav-link">
+                                <i class="nav-icon fas fa-heading"></i>
+                                <p>
+                                    Başlıklar
+                                </p>
+                            </a>
+                        </li>
                         <!--
 
 
