--- a/MvcProjeKampi.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/MvcProjeKampi.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -113,6 +113,14 @@ to get the desired effect
                                 </p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="/About/Index" class="nav-link">
+                                <i class="nav-icon fas fa-address-card"></i>
+                                <p>
+                                    Hakkımızda
+                                </p>
+                            </a>
+                        </li>
                         <!--
 
 
