--- a/MvcProjeKampi.WebUI/Views/About/Index.cshtml
+++ b/MvcProjeKampi.WebUI/Views/About/Index.cshtml
@@ -24,33 +24,4 @@
         </tr>
     }
 </table>
-
-<button class="btn btn-primary" data-toggle="modal" data-target="#Modal1"> Yeni Hakkımızda Yazı Girişi</button>
-<div class="modal" id="Modal1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2 class="modal-title">Hakkımızda Yazı Girişi</h2>
-            </div>
-            
-            <form method="post" action="/About/AddAbout">
-                <div class="modal-body">
-                    <label>Hakkımızda metin 1</label>
-                    <input type="text" name="AboutDetails1" class="form-control" />
-                    <br />
-                    <label>Hakkımızda metin 2</label>
-                    <input type="text" name="AboutDetails2" class="form-control" />
-                    <br />
-                    <label>Hakkımızda metin 3</label>
-                    <input type="text" name="AboutImage1" class="form-control" />
-                    <br />
-                    <label>Hakkımızda metin 4</label>
-                    <input type="text" name="AboutImage2" class="form-control" />
-                    <br />
-                    <button class="btn btn-danger">Kaydet</button>
-                </div>
-            </form>
-
-        </div>
-    </div>
-</div>
+@Html.Action("AboutPartial","About")
