--- a/MvcProjeKampi.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/MvcProjeKampi.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -121,6 +121,14 @@ to get the desired effect
                                 </p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="/Contact/Index" class="nav-link">
+                                <i class="nav-icon fas fa-address-card"></i>
+                                <p>
+                                    İletişim & Mesajlar
+                                </p>
+                            </a>
+                        </li>
                         <!--
 
 
