--- a/MvcProjeKampi.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/MvcProjeKampi.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -647,7 +647,7 @@ to get the desired effect
     <script src="~/AdminLTE-3.0.4/dist/js/adminlte.js"></script>
     <!-- OPTIONAL SCRIPTS -->
     <script src="~/AdminLTE-3.0.4/plugins/chart.js/Chart.min.js"></script>
-    <script src="~/AdminLTE-3.0.4/dist/js/demo.js"></script>
+    @*<script src="~/AdminLTE-3.0.4/dist/js/demo.js"></script>*@
     <script src="~/AdminLTE-3.0.4/dist/js/pages/dashboard3.js"></script>
 </body>
 </html>
