--- a/MvcProjeKampi.WebUI/Views/Contact/Index.cshtml
+++ b/MvcProjeKampi.WebUI/Views/Contact/Index.cshtml
@@ -86,7 +86,7 @@
                                                 <b>@item.Subject</b> - @item.Message.Substring(0, 10)...
                                             </td>
                                             <td class="mailbox-attachment"></td>
-                                            <td class="mailbox-date">5 mins ago</td>
+                                            <td class="mailbox-date">@item.ContactDate.ToString("dd-MMM-yyyy")</td>
                                         </tr>
                                     }
 
