--- a/MvcProjeKampi.WebUI/Views/Contact/MenuPartial.cshtml
+++ b/MvcProjeKampi.WebUI/Views/Contact/MenuPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="col-md-3">
-    <a href="compose.html" class="btn btn-primary btn-block mb-3">Mesaj Yaz</a>
+    <a href="/Message/NewMessage" class="btn btn-primary btn-block mb-3">Mesaj Yaz</a>
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">Klasör</h3>
@@ -11,14 +11,20 @@
         </div>
         <div class="card-body p-0">
             <ul class="nav nav-pills flex-column">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a href="/Contact/Index" class="nav-link">
+                        <i class="fas fa-inbox"></i> İletişim
+                        <span class="badge bg-primary float-right">12</span>
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a href="/Message/Inbox" class="nav-link">
                         <i class="fas fa-inbox"></i> Gelen Mesajlar
                         <span class="badge bg-primary float-right">12</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/Message/Sendbox" class="nav-link">
                         <i class="far fa-envelope"></i> Gönderilen Mesajlar
                     </a>
                 </li>
