--- a/MvcProjeKampi.WebUI/Views/Contact/MenuPartial.cshtml
+++ b/MvcProjeKampi.WebUI/Views/Contact/MenuPartial.cshtml
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/Message/Draft" class="nav-link">
                         <i class="far fa-file-alt"></i> Taslaklar
                         <span class="badge bg-yellow float-right">@ViewBag.draftMail</span>
                     </a>
