--- a/MvcProjeKampi.WebUI/Views/Shared/_WriterLayout.cshtml
+++ b/MvcProjeKampi.WebUI/Views/Shared/_WriterLayout.cshtml
@@ -46,7 +46,7 @@ to get the desired effect
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                        <img src="~/Theme/black-woman.png" class="img-circle elevation-2" alt="User Image">
+                        <img src="~/AdminLTE-3.0.4/images/avatar.png" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
                         <a href="#" class="d-block">Yazar Paneli</a>
