--- a/MvcProjeKampi.WebUI/Views/Talent/TalentCard.cshtml
+++ b/MvcProjeKampi.WebUI/Views/Talent/TalentCard.cshtml
@@ -44,8 +44,8 @@
                 <!-- main-row-one -->
                 <div class="profile-grid logo wthree">
                     <img src="~/Theme/AdminLTE-3.0.4/Skills_Theme/web/images/talentcard.jpg" />
-                    <h2>Burcu ŞENOL</h2>
-                    <p>Bilişim Sistemleri Mühendisi</p>
+                    <h2>Evren Buyurgan</h2>
+                    <p>Kıdemli Network Sistem Uzmanı</p>
 
                 </div>
                 <h3 class="title">Yeteneklerim</h3>
@@ -62,7 +62,7 @@
                 <script src="~/AdminLTE-3.0.4/Skills_Theme/web/js/bars.js"></script>
                 <div class="social-icons agileits">
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/burcu%C5%9Fenol/" class="be"></a></li>
+                        <li><a href="https://tr.linkedin.com/in/evren-buyurgan-01852574" class="be"></a></li>
                     </ul>
                 </div>
                 <div class="clear"></div>
